# zensh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main
man/: zensh.1
src/: autocomplete.c  builtins.c  exec.c  main.c  pipeline.c  redir.c  term.c  tokenize.c  utils.c  zensh.h
